--- a/css/doki.css
+++ b/css/doki.css
@@ -9,13 +9,15 @@
 /*****************************************
 navigacija navigation
 ******************************************/
-nav.navbar-default{
+
+nav#header{
 	border:0px solid transparent;
 	height:100px;
 	border-radius:0px;
 	background-image:none;
 	background-color:#f00;
 	background-image:-moz-linear-gradient(25deg, #1a2247  30%, #0087d0 30%);
+	background-image:-webkit-linear-gradient(25deg, #1a2247  30%, #0087d0 30%);
 }
 .navbar-brand{
 	padding:12px 0px 7px 20px;
@@ -29,24 +31,32 @@ nav.navbar-default{
 	color:#fff;
 	margin-left:20px;
 }
+
 div.navbar-collapse{
 	
 }
-ul.navbar-nav{
+ul#ul-nav{
 	position:relative;
-	top:20px;
+	top:0px;
 	float:right;
 	margin-right:20px;
+	margin-top:40px;
 }
-ul.navbar-nav li{
+ul#ul-nav li{
 	border-left:1px solid #fff;
 	color:#fff;
+	margin-top:0px;
+	padding-top:0px;
+	margin-bottom:0px;
+	padding-bottom:0px;
 } 
-#header ul.navbar-nav li:first-child{
+#header ul#ul-nav li:first-child{
 	border-left:none;
 } 
-.navbar-default .navbar-nav > li > a{ 
+.navbar-default ul#ul-nav > li > a{ 
 	color:#fff;
-	/*margin-top:0px;
-	padding:0px;*/
+	margin-top:0px;
+	padding-top:0px;
+	margin-bottom:0px;
+	padding-bottom:0px;
 } 
