--- a/css/doki.css
+++ b/css/doki.css
@@ -43,13 +43,24 @@ ul#ul-nav{
 	margin-top:40px;
 }
 ul#ul-nav li{
-	border-left:1px solid #fff;
+	/*border-left:1px solid #fff;*/
 	color:#fff;
 	margin-top:0px;
 	padding-top:0px;
 	margin-bottom:0px;
 	padding-bottom:0px;
+	padding-right:0px;
 } 
+ul#ul-nav li::before{
+	content: "|";
+	position: relative;
+	top: -2px;
+	margin:0px;
+	float:left;
+}
+ul#ul-nav li:first-child::before{
+	content: "";
+}
 #header ul#ul-nav li:first-child{
 	border-left:none;
 } 
