--- a/css/doki.css
+++ b/css/doki.css
@@ -15,6 +15,10 @@ div.container-fluid{
     margin-right: auto;
     margin-left: auto;
 }
+h1.naslov{
+	padding-left:10%;
+	margin-top:-2%;
+}
 /*****************************************
 navigacija navigation
 ******************************************/
@@ -24,8 +28,7 @@ nav#header{
 	height:100px;
 	border-radius:0px;
 	background-image:none;
-	/*background-color:yellow;*/
-	margin-bottom:0px;
+	margin:0px;
 	background-image:-moz-linear-gradient(25deg, #1a2247  30%, #0087d0 30%);
 	background-image:-webkit-linear-gradient(25deg, #1a2247  30%, #0087d0 30%);
 }
@@ -50,17 +53,15 @@ div.navbar-header{
 div#navigation{
 	border:none;
 	background-color:#1a2247;
-	/*background-image:-moz-linear-gradient(25deg,   30%, #0087d0 30%);
-	background-image:-webkit-linear-gradient(25deg, #1a2247  30%, #0087d0 30%);*/
-	/*background-color:green;*/
 }
-div.navbar-collapse.in{
-	background-color:red;
+.navbar-collapse{
+	border-color:transparent;
 }
+
 ul#ul-nav{
 	position:relative;
 	top:0px;
-	float:right;
+	float:left;
 	margin-right:20px;
 	margin-top:40px;
 }
@@ -73,7 +74,7 @@ ul#ul-nav li{
 	padding-right:0px;
 } 
 ul#ul-nav li::before{
-	content: "|";
+	content: "";
 	position: relative;
 	top: -2px;
 	margin:0px;
@@ -102,6 +103,8 @@ pocetna home
 	background-repeat:no-repeat;
 	background-position:center right;
 	background-size:auto 80%, auto 100%;
+	margin-left:15px;
+	margin-right:15px;
 	
 }
 #drugi-o-nama h2{
@@ -121,5 +124,11 @@ media query
 		border:0px solid transparent;
 		background-image:-moz-linear-gradient(25deg, #1a2247  30%, #0087d0 30%);
 		background-image:-webkit-linear-gradient(25deg, #1a2247  30%, #0087d0 30%);
+	}
+	ul#ul-nav{
+		float:right;
+	}
+	ul#ul-nav li::before{
+		content: "|";
 	}
 }
