--- a/css/doki.css
+++ b/css/doki.css
@@ -61,7 +61,7 @@ div#navigation{
 	background-color:#1a2247;
 }
 .navbar-collapse{
-	border-color:transparent;
+	box-shadow:none;
 }
 
 ul#ul-nav{
@@ -93,14 +93,16 @@ ul#ul-nav li{
 /*****************************************
 pocetna home
 ******************************************/
+#foto_link{
+	margin:2% auto;
+}
 #drugi-o-nama{
 	padding:5% 20% 5% 2%;
 	background-image:url("../images/pas.png"), -moz-linear-gradient(to bottom, #fff  25%, #0086cf 25%);
 	background-repeat:no-repeat;
 	background-position:center right;
 	background-size:auto 80%, auto 100%;
-	margin-left:15px;
-	margin-right:15px;
+	margin:1% 15px;
 	
 }
 #drugi-o-nama h2{
@@ -110,6 +112,12 @@ pocetna home
 }
 #drugi-o-nama div:first-child{
 	float:right;
+}
+#text_link{
+	margin:2% auto;
+}
+#text_link div:nth-child(2){
+	background-color:#ef7b00;
 }
 /**********************************
 footer
