--- a/css/doki.css
+++ b/css/doki.css
@@ -29,6 +29,7 @@ h1.naslov{
     transform: translateY(-50%);
 	background: transparent;
 	background: -moz-linear-gradient(30deg, rgb(255, 255, 255) 30%, rgba(255, 255, 255, 0.00) 30%);
+	background: -webkit-linear-gradient(30deg, rgb(255, 255, 255) 30%, rgba(255, 255, 255, 0.00) 30%);
 	/*background: -webkit-linear-gradient(333deg, rgb(255, 255, 255) 30%, transparent 30%);
 	background: -o-linear-gradient(333deg, rgb(255, 255, 255) 30%, transparent 30%);
 	background: -ms-linear-gradient(333deg, rgb(255, 255, 255) 30%, transparent 30%);
@@ -119,6 +120,7 @@ pocetna home
 #drugi-o-nama{
 	padding:5% 20% 5% 2%;
 	background-image:url("../images/pas.png"), -moz-linear-gradient(to bottom, #fff  25%, #0086cf 25%);
+	background-image:url("../images/pas.png"), linear-gradient(to bottom, #fff  25%, #0086cf 25%);
 	background-repeat:no-repeat;
 	background-position:center right;
 	background-size:auto 80%, auto 100%;
@@ -166,6 +168,7 @@ footer
 #footer_soc{
 	color:#00a5ef;
 	background-image: -moz-linear-gradient(30deg, #182143  75%, #fff 75%);
+	background-image: -webkit-linear-gradient(30deg, #182143  75%, #fff 75%);
 	position:relative;
 	text-align:right;
 }
@@ -232,4 +235,5 @@ media query
 	#footer_contact div:last-child::before{
 		content: "";
 	}
+	
 }
