--- a/css/doki.css
+++ b/css/doki.css
@@ -6,6 +6,9 @@ general
 .clear{
 	clear:both;
 }
+.full-width{
+	width:100%;
+}
 div.container-fluid{
     padding-right: 0px;
     padding-left: 0px;
@@ -21,23 +24,16 @@ div.container-fluid{
 h1.naslov{
 	position:relative;
 	width:100%;
-	padding-left:15%;
-	margin-top:-1%;
+	padding-left:10%;
+	margin-top:0%;
 	padding-top:1%;
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 	background: transparent;
-	background: -moz-linear-gradient(30deg, rgb(255, 255, 255) 30%, rgba(255, 255, 255, 0.00) 30%);
-	background: -webkit-linear-gradient(30deg, rgb(255, 255, 255) 30%, rgba(255, 255, 255, 0.00) 30%);
-	/*background: -webkit-linear-gradient(333deg, rgb(255, 255, 255) 30%, transparent 30%);
-	background: -o-linear-gradient(333deg, rgb(255, 255, 255) 30%, transparent 30%);
-	background: -ms-linear-gradient(333deg, rgb(255, 255, 255) 30%, transparent 30%);
-	background: linear-gradient(63deg, rgb(255, 255, 255) 30%, transparent 30%);*/
-
+	background: -moz-linear-gradient(30deg, rgb(255, 255, 255) 50%, rgba(255, 255, 255, 0.00) 50%);
+	background: -webkit-linear-gradient(30deg, rgb(255, 255, 255) 50%, rgba(255, 255, 255, 0.00) 50%);
 	color:#182143;
-	box-shadow:none;
-	border:none;
 }
 li{
 	list-style-type:none;
@@ -86,7 +82,7 @@ ul#ul-nav{
 	top:0px;
 	float:left;
 	margin-right:20px;
-	margin-top:40px;
+	margin-top:10px;
 }
 ul#ul-nav li{
 	color:#fff;
@@ -110,12 +106,22 @@ ul#ul-nav li{
 /*****************************************
 pocetna home
 ******************************************/
+
 #pocetna_text div{
 	text-align:justify;
 	margin-top:0.5%;
 }
 #foto_link{
+	position:relative;
 	margin:2% auto;
+}
+#foto_link>div{
+}
+#foto_link .podnaslov{
+	position:absolute;
+	border:1px solid red;
+	width:93%;
+	margin:0px auto;
 }
 #drugi-o-nama{
 	padding:5% 20% 5% 2%;
@@ -137,28 +143,37 @@ pocetna home
 }
 #text_link{
 	margin:2% auto;
+	overflow: hidden;
 }
 #text_link div{
 	text-align:justify;
-	height:100%;
+    margin-bottom: -10000px;
+    padding-bottom: 10000px;
 }
-#text_link div:nth-child(1){
+#text_link>div:nth-child(1){
 	background-color:#ef7b99;
+	float: left;
 }
 #text_link div:nth-child(3){
 	background-color:#007b99;
+	text-align:center;
+	float: right;
 }
 #text_link div:nth-child(2){
+
 	background-color:#ef7b00;
 	background-image:url("../images/upitnik.png");
 	background-repeat:no-repeat;
 	background-position:90% 10%;
 	padding-bottom:3%;
+	margin-bottom: -10000px;
+    padding-bottom: 10000px;
 	color:#fff;
 }
 #text_link div:nth-child(2) h2{
 	margin:5% auto;
 }
+
 /**********************************
 footer
 ************************************/
@@ -208,6 +223,7 @@ media query
 	}
 	ul#ul-nav{
 		float:right;
+		margin-top:40px;
 	}
 	ul#ul-nav li::before{
 		content: "|";
@@ -218,6 +234,49 @@ media query
 	}
 	ul#ul-nav li:first-child::before{
 		content: "";
+	}
+	h1.naslov{
+		position:relative;
+		width:100%;
+		padding-left:15%;
+		margin-top:-1%;
+		padding-top:1%;
+		-webkit-transform: translateY(-50%);
+		-ms-transform: translateY(-50%);
+		transform: translateY(-50%);
+		background: transparent;
+		background: -moz-linear-gradient(30deg, rgb(255, 255, 255) 30%, rgba(255, 255, 255, 0.00) 30%);
+		background: -webkit-linear-gradient(30deg, rgb(255, 255, 255) 30%, rgba(255, 255, 255, 0.00) 30%);
+		color:#182143;
+	}
+	#text_link{
+		margin:2% auto;
+		overflow: hidden;
+	}
+	#text_link div{
+		text-align:justify;
+		margin-bottom: -10000px;
+		padding-bottom: 10000px;
+	}
+	#text_link>div:nth-child(1){
+		background-color:#ef7b99;
+		float: left;
+	}
+	#text_link div:nth-child(3){
+		background-color:#007b99;
+		text-align:center;
+		float: right;
+	}
+	#text_link div:nth-child(2){
+
+		background-color:#ef7b00;
+		background-image:url("../images/upitnik.png");
+		/**/background-repeat:no-repeat;
+		background-position:85% 0.2%;
+		padding-bottom:3%;
+		margin-bottom: -10000px;
+		padding-bottom: 10000px;
+		color:#fff;
 	}
 	#footer_contact div{
 		display:inline-block;
@@ -235,5 +294,4 @@ media query
 	#footer_contact div:last-child::before{
 		content: "";
 	}
-	
 }
