--- a/css/doki.css
+++ b/css/doki.css
@@ -1,8 +1,34 @@
 /* doki.css */
-
+@font-face {
+    font-family: roboto-regular;
+    src: url(../fonts/ROBOTO-REGULAR.TTF);
+}
+@font-face {
+    font-family: roboto-medium;
+    src: url(../fonts/ROBOTO-MEDIUM.TTF);
+}
+@font-face {
+    font-family: roboto-light;
+    src: url(../fonts/ROBOTO-LIGHT.TTF);
+}
+@font-face {
+    font-family: robotoc-regular;
+    src: url(../fonts/ROBOTOCONDENSED-REGULAR.TTF);
+}
+@font-face {
+    font-family: robotoc-light;
+    src: url(../fonts/ROBOTOCONDENSED-LIGHT.TTF);
+}
+@font-face {
+    font-family: roboto-bold;
+    src: url(../fonts/ROBOTO-BOLD.TTF);
+}
 /****************************
 general 
 ******************************/
+*{
+	font-family:roboto-light;
+}
 .clear{
 	clear:both;
 }
@@ -226,7 +252,30 @@ pocetna home
 /**********************************
 O nama about us
 ************************************/
-
+#about_content{
+	margin-bottom:3%;
+}
+.nas_tim, .nas_tim img{
+	text-align:center;
+}
+.nas_tim img{
+	margin:2% auto;
+}
+.nas_tim .col-sm-12{
+	text-align:left;
+}
+#about_gallery .col-xs-6{
+	margin:5% 0px;
+}
+#about_gallery .col-sm-12 h1{
+	margin-top:0px;
+}
+/**********************************
+mala praksa
+**********************************/
+#mala_saveti{
+	background-color:#008cd2;
+}
 /**********************************
 footer
 ************************************/
@@ -351,6 +400,10 @@ media query
 		font-size:26pt;
 		margin-bottom:0px;
 		
+	}
+	/*o-nama about-us*/
+	#about_gallery .col-xs-6{
+		width:100%;
 	}
 }
 @media (max-width:400px){
