--- a/css/doki.css
+++ b/css/doki.css
@@ -129,8 +129,21 @@ ul#ul-nav li{
 } 
 .navbar-default ul#ul-nav > li > a:hover{ 
 	text-shadow:0px 0px 5px #fff;
-} /*
-*/
+} 
+.navbar-default .navbar-nav > .active > a{
+	background-image:none ;
+	box-shadow:none;
+	background-color:transparent !important;
+	border:none;
+}
+.navbar-default .navbar-nav > .active,
+.navbar-default .navbar-nav > .active:focus, 
+.navbar-default .navbar-nav > .active:active{
+	border:none !important;
+}
+.navbar-default .navbar-nav > .active:hover{
+	background-color:transparent;
+}
 /*****************************************
 pocetna home
 ******************************************/
