--- a/css/doki.css
+++ b/css/doki.css
@@ -137,8 +137,8 @@ ul#ul-nav li{
 	border:none;
 }
 .navbar-default .navbar-nav > .active,
-.navbar-default .navbar-nav > .active:focus, 
-.navbar-default .navbar-nav > .active:active{
+.navbar-default .navbar-nav > .active:active, 
+.navbar-default .navbar-nav > .active:focus{
 	border:none !important;
 }
 .navbar-default .navbar-nav > .active:hover{
@@ -286,8 +286,13 @@ O nama about us
 /**********************************
 mala praksa
 **********************************/
+#mala_content{
+	overflow: hidden;
+}
 #mala_saveti{
 	background-color:#008cd2;
+	margin-bottom: -10000px;
+	padding-bottom: 10000px;
 }
 /**********************************
 footer
